force-app/main/default/objects/Booking__c/fields/Turf__c.field-meta.xml
<CustomField>
    <fullName>Turf__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Turf</label>
    <referenceTo>Turf__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>