force-app/main/default/objects/Booking__c/fields/User_Email__c.field-meta.xml
<CustomField>
    <fullName>User_Email__c</fullName>
    <label>User Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>