force-app/main/default/objects/Booking__c/fields/User_Phone__c.field-meta.xml
<CustomField>
    <fullName>User_Phone__c</fullName>
    <label>User Phone</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>